public interface Fightable {
    void fight(Character character2);
}
